Added destination to Sydney

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
               <div class="destination" id="edinburgh">
                 <h2>Edinburgh</h2>
             
+                 </div>
+              <div class="destination" id="Sydney">
+                <h2>Sydney</h2>
         </div>
         
 
